# prest

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile.python  Makefile  README.md  docker-compose-prod-python.yml  docker-compose-python.yml  docker-compose-test.yml  docker-compose-tutorial-auth.yml  docker-compose-tutorial-scripts.yml  docker-compose-tutorial.yml  pyproject.toml
.github/workflows/: test-contract.yml  test-python.yml
docs/: architecture.md  migration-guide.md  onboarding.md  performance.md  python-contract-freeze.md  python-migrations.md  python-plugins.md  python-review-2026-07-10.md  python-review-fixes-2026-07-10.md  python-review-phase-10-2026-07-11.md  python-review-phase-12-2026-07-12.md  python-review-phases-0-9-2026-07-10.md  python-rewrite-plan.md  reference.md  tuning.md
docs/tutorials/: README.md  getting-started.md  save-a-query.md  secure-an-endpoint.md
install-manifests/: README.md
install-manifests/kubernetes/: deployment-python.yaml
prest_py/: __init__.py  app.py  cli.py  main.py
prest_py/api/: __init__.py  deps.py  middleware.py
prest_py/cache/: __init__.py  response_cache.py
prest_py/domain/: __init__.py  identifiers.py  permissions.py
prest_py/plugins/: __init__.py  contracts.py  loader.py
prest_py/postgres/: __init__.py  executor.py  pool.py  query_builder.py  scripts.py
prest_py/settings/: __init__.py  loader.py  models.py
scripts/: bench.py  parity-check.py  run-baseline.sh  run-parity.sh
tests/contract/: README.md  conftest.py  helpers.py  test_catalog_contract.py  test_crud_contract.py  (+2 more)
(+25 files in other folders)
