[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "prest-py"
version = "0.1.0"
description = "Python rewrite foundation for pREST"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.30,<1.0",
  "bcrypt>=4.2,<5.0",
  "fastapi>=0.115,<1.0",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.7,<3.0",
  "PyJWT>=2.10,<3.0",
  "typer>=0.12,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.0,<10.0",
  "pytest-asyncio>=0.24,<2.0",
  "ruff>=0.9,<1.0",
]

[project.scripts]
prestd = "prest_py.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101", "S104", "S105"]

[tool.ruff.lint.per-file-ignores]
"prest_py/api/routes/auth.py" = ["S608"]
"prest_py/postgres/executor.py" = ["S608"]
"prest_py/postgres/query_builder.py" = ["S608"]
"prest_py/settings/models.py" = ["S105"]

[tool.hatch.build.targets.wheel]
packages = ["prest_py"]
